--- a/templates/chat.html
+++ b/templates/chat.html
@@ -45,20 +45,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Pinball Rules AI</h1>
+        <h1>Pinball Rules</h1>
         <input type="text" id="question" placeholder="Type a pinball machine name...">
         <button onclick="askQuestion()">Search</button>
-
-        <div class="examples">
-            <strong>Try these:</strong>
-            <ul>
-                <li class="example-query">Fish Tales</li>
-                <li class="example-query">Fish Tales strategy</li>
-                <li class="example-query">John Wick multiball</li>
-                <li class="example-query">The Walking Dead</li>
-                <li class="example-query">Space Shuttle skill shot</li>
-            </ul>
-        </div>
 
         <div id="response"></div>
     </div>
